--- a/HTM_lessons.html
+++ b/HTM_lessons.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <!-- HEADER -->
+    <!-- HEADER -->
     <header>
       <div class="container">
         <div class="row">
