--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>U B E R E A T S</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="my.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -15,7 +15,6 @@
     />
   </head>
   <body>
-    <!-- HEADER -->
     <!-- HEADER -->
     <header>
       <div class="container">
@@ -124,9 +123,9 @@
             </div>
             <div class="social">
               <p><span style="color: #49A144;">#</span>UberEats</p>
-              <a href="#"><img src="img/social/facebook.svg" alt=""></a>
-              <a href="#"><img src="img/social/twitter.svg" alt=""></a>
-              <a href="#"><img src="img/social/instagram.svg" alt=""></a>
+              <a href="#"><img src="img/facebook.svg" alt=""></a>
+              <a href="#"><img src="img/twitter.svg" alt=""></a>
+              <a href="#"><img src="img/instagram.svg" alt=""></a>
             </div>
           </div>
           <div class="footer2 col-xl-4 col-md-4 col-xs-12">
@@ -157,8 +156,8 @@
         </div>
       <hr>
       <div class="download">
-        <a href=""><img src="img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.png" alt=""></a>
-        <a href=""><img src="img/en_badge_web_generic-cf6dad406f.png" alt=""></a>
+        <a href=""><img src="img/aps.png" alt=""></a>
+        <a href=""><img src="img/gp.png" alt=""></a>
       </div>
       <hr>
       <div class="row prava">
@@ -177,7 +176,7 @@
 
     <!-- BUTTON-UP -->
     <a href="#" class="btn-up">
-      <img src="img/btn-up.png" alt="" />
+      <img src="img/btn-up.svg" alt="" />
     </a>
   </body>
 </html>
